add galery layout design

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>||Template||</title>
+    <title>|| Template ||</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="masonry-gallery clearfix">
+      <div class="masonry-pattern-1">
+        <img src="img/products/project11.jpg" alt="image" />
+      </div>
+
+      <div class="masonry-pattern-2">
+        <img src="img/products/project2.jpg" alt="image" />
+      </div>
+      <div class="masonry-pattern-2">
+        <img src="img/products/project3.jpg" alt="image" />
+      </div>
+
+      <div class="masonry-pattern-1">
+        <img src="img/products/project8.jpg" alt="image" />
+      </div>
+
+      <div class="masonry-pattern-2 balance-height">
+        <img src="img/products/project5.jpg" alt="image" />
+      </div>
+      <div class="masonry-pattern-2 balance-height">
+        <img src="img/products/project12.jpg" alt="image" />
+      </div>
+    </div>
+
+    <script></script>
+  </body>
 </html>
