--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header class="clearfix">
+      <div class="logo-wrapper">
+        <div class="logo">
+          Zorig Auction
+        </div>
+      </div>
+      <nav>
+        <ul class="navbar clearfix">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">GALLERY</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="masonry-gallery clearfix">
       <div class="masonry-pattern-1">
         <img src="img/products/project11.jpg" alt="image" />
