--- a/index.html
+++ b/index.html
@@ -27,24 +27,66 @@
     <div class="masonry-gallery clearfix">
       <div class="masonry-pattern-1">
         <img src="img/products/project11.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
 
       <div class="masonry-pattern-2">
         <img src="img/products/project2.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
       <div class="masonry-pattern-2">
         <img src="img/products/project3.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
 
       <div class="masonry-pattern-1">
         <img src="img/products/project8.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
 
       <div class="masonry-pattern-2 balance-height">
         <img src="img/products/project5.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
       <div class="masonry-pattern-2 balance-height">
         <img src="img/products/project12.jpg" alt="image" />
+        <div class="flip-btm">
+          <h3>
+            <span> Mandala Thangka</span>
+            <span> $500.00</span>
+          </h3>
+          <button>VIEW</button>
+        </div>
       </div>
     </div>
 
