--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
       </div>
     </div>
 
-    <script></script>
+    <footer>
+      <div class="inner-footer">
+        <div class="contact-section">
+          <h3>Contact</h3>
+          <p>+977-9869768601</p>
+          <p>akasky70@gmail.com</p>
+          <p>www.zorigauction.com</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
