add social icons and product page

--- a/index.html
+++ b/index.html
@@ -5,100 +5,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>|| Template ||</title>
+
+    <link href="./css/fontawesome/fontawesome.css" rel="stylesheet" />
+    <link href="./css/fontawesome/brands.css" rel="stylesheet" />
+    <link href="./css/fontawesome/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="clearfix">
-      <div class="logo-wrapper">
-        <div class="logo">
-          Zorig Auction
+    <!-- header -->
+    <div class="container">
+      <header class="padding-5 clearfix">
+        <div class="logo-wrapper">
+          <div class="social-media pull-right">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter-square"></i>
+          </div>
+          <div class="logo">
+            Zorig Auction
+          </div>
         </div>
-      </div>
-      <nav>
-        <ul class="navbar clearfix">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">GALLERY</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
+        <nav>
+          <ul class="navbar clearfix">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">GALLERY</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!-- header ends -->
 
-    <div class="masonry-gallery clearfix">
-      <div class="masonry-pattern-1">
-        <img src="img/products/project11.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
-        </div>
-      </div>
+      <!-- masnory gallery -->
+      <div class="row">
+        <div class="masonry-gallery clearfix">
+          <div class="masonry-pattern-1">
+            <img src="img/products/project11.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
 
-      <div class="masonry-pattern-2">
-        <img src="img/products/project2.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
-        </div>
-      </div>
-      <div class="masonry-pattern-2">
-        <img src="img/products/project3.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
-        </div>
-      </div>
+          <div class="masonry-pattern-2">
+            <img src="img/products/project2.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
+          <div class="masonry-pattern-2">
+            <img src="img/products/project3.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
 
-      <div class="masonry-pattern-1">
-        <img src="img/products/project8.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
-        </div>
-      </div>
+          <div class="masonry-pattern-1">
+            <img src="img/products/project8.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
 
-      <div class="masonry-pattern-2 balance-height">
-        <img src="img/products/project5.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
+          <div class="masonry-pattern-2 balance-height">
+            <img src="img/products/project5.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
+          <div class="masonry-pattern-2 balance-height">
+            <img src="img/products/project12.jpg" alt="image" />
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+              <button>VIEW</button>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="masonry-pattern-2 balance-height">
-        <img src="img/products/project12.jpg" alt="image" />
-        <div class="flip-btm">
-          <h3>
-            <span> Mandala Thangka</span>
-            <span> $500.00</span>
-          </h3>
-          <button>VIEW</button>
+      <!-- masonry gallery ends -->
+
+      <!-- contents -->
+      <div class="row clearfix">
+        <div class="col-12 padding-0">
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              akash
+            </div>
+          </div>
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              akash
+            </div>
+          </div>
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              akash
+            </div>
+          </div>
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              akash
+            </div>
+          </div>
         </div>
       </div>
+      <!-- content ends -->
+
+      <!-- footer  -->
+
+      <footer class="padding-5">
+        <div class="inner-footer">
+          <div class="contact-section">
+            <h3>Contact</h3>
+            <p>+977-9869768601</p>
+            <p>akasky70@gmail.com</p>
+            <p>www.zorigauction.com</p>
+
+            <div class="social-media">
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter-square"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
-
-    <footer>
-      <div class="inner-footer">
-        <div class="contact-section">
-          <h3>Contact</h3>
-          <p>+977-9869768601</p>
-          <p>akasky70@gmail.com</p>
-          <p>www.zorigauction.com</p>
-        </div>
-      </div>
-    </footer>
+    <!-- footer ends -->
   </body>
 </html>
