add product effects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- header -->
     <div class="container">
-      <header class="padding-5 clearfix">
+      <header class="padding-15 clearfix">
         <div class="logo-wrapper">
           <div class="social-media pull-right">
             <i class="fab fa-facebook-square"></i>
@@ -37,7 +37,7 @@
       <!-- header ends -->
 
       <!-- masnory gallery -->
-      <div class="row">
+      <div class="row padding-10">
         <div class="masonry-gallery clearfix">
           <div class="masonry-pattern-1">
             <img src="img/products/project11.jpg" alt="image" />
@@ -109,24 +109,72 @@
       <!-- contents -->
       <div class="row clearfix">
         <div class="col-12 padding-0">
+          <div class="headings text-center padding-15">
+            <h2 class="border-botom">New Product</h2>
+          </div>
+
           <div class="col-3 product-wrapper">
             <div class="product">
-              akash
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
             </div>
           </div>
           <div class="col-3 product-wrapper">
             <div class="product">
-              akash
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
             </div>
           </div>
           <div class="col-3 product-wrapper">
             <div class="product">
-              akash
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
             </div>
           </div>
           <div class="col-3 product-wrapper">
             <div class="product">
-              akash
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
             </div>
           </div>
         </div>
@@ -134,8 +182,7 @@
       <!-- content ends -->
 
       <!-- footer  -->
-
-      <footer class="padding-5">
+      <footer class="padding-15">
         <div class="inner-footer">
           <div class="contact-section">
             <h3>Contact</h3>
