add product effects

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-3 product-wrapper">
             <div class="product">
               <div class="product-img-wrapper">
@@ -145,6 +146,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-3 product-wrapper">
             <div class="product">
               <div class="product-img-wrapper">
@@ -161,6 +163,75 @@
               </div>
             </div>
           </div>
+
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-3 product-wrapper">
+            <div class="product">
+              <div class="product-img-wrapper">
+                <img src="img/products/project5.jpg" alt="image" />
+              </div>
+
+              <div class="product-info">
+                <h2>Mandala Thangka Art</h2>
+                <p class="text-danger">Price: $500</p>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
+                <button class="full-width">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+
           <div class="col-3 product-wrapper">
             <div class="product">
               <div class="product-img-wrapper">
