add inline title effects for recommended gallery

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             <i class="fab fa-twitter-square"></i>
           </div>
           <div class="logo">
-            Zorig Auction
+            <span>
+              Zorig
+            </span>
+            <span>
+              Auction
+            </span>
           </div>
         </div>
         <nav>
@@ -41,10 +46,18 @@
         <div class="masonry-gallery clearfix">
           <div class="masonry-pattern-1">
             <img src="img/products/project11.jpg" alt="image" />
-            <div class="flip-btm">
+
+            <div class="inline-title">
               <h3>
                 <span> Mandala Thangka</span>
                 <span> $500.00</span>
+              </h3>
+            </div>
+
+            <div class="flip-btm">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span class="text-danger"> $500.00</span>
               </h3>
               <button>VIEW</button>
             </div>
@@ -52,6 +65,14 @@
 
           <div class="masonry-pattern-2">
             <img src="img/products/project2.jpg" alt="image" />
+
+            <div class="inline-title">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+            </div>
+
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
@@ -62,6 +83,14 @@
           </div>
           <div class="masonry-pattern-2">
             <img src="img/products/project3.jpg" alt="image" />
+
+            <div class="inline-title">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+            </div>
+
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
@@ -73,6 +102,14 @@
 
           <div class="masonry-pattern-1">
             <img src="img/products/project8.jpg" alt="image" />
+
+            <div class="inline-title">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+            </div>
+
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
@@ -84,6 +121,14 @@
 
           <div class="masonry-pattern-2 balance-height">
             <img src="img/products/project5.jpg" alt="image" />
+
+            <div class="inline-title">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+            </div>
+
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
@@ -94,6 +139,14 @@
           </div>
           <div class="masonry-pattern-2 balance-height">
             <img src="img/products/project12.jpg" alt="image" />
+
+            <div class="inline-title">
+              <h3>
+                <span> Mandala Thangka</span>
+                <span> $500.00</span>
+              </h3>
+            </div>
+
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
@@ -109,8 +162,10 @@
       <!-- contents -->
       <div class="row clearfix">
         <div class="col-12 padding-0">
-          <div class="headings text-center padding-15">
-            <h2 class="border-botom">New Product</h2>
+          <div class="headings text-center padding-15 clearfix">
+            <span class="line col-4 padding-0"></span>
+            <h2 class="col-4 padding-0">New Product</h2>
+            <span class="line col-4 padding-0"></span>
           </div>
 
           <div class="col-3 product-wrapper">
@@ -121,7 +176,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -138,7 +193,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -155,7 +210,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -172,7 +227,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -189,7 +244,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -206,7 +261,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -223,7 +278,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
@@ -240,7 +295,7 @@
 
               <div class="product-info">
                 <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">Price: $500</p>
+                <p class="text-danger">$500</p>
                 <p class="discount-price">
                   <span class="text-info"><s>$600</s></span> -30%
                 </p>
