apply display gird and add categories block

--- a/index.html
+++ b/index.html
@@ -168,144 +168,179 @@
             <span class="line col-4 padding-0"></span>
           </div>
 
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
+          <div class="product-display-block">
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
 
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
-
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
 
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
-
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
 
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
-
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
-              </div>
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
 
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="col-3 product-wrapper">
-            <div class="product">
-              <div class="product-img-wrapper">
-                <img src="img/products/project5.jpg" alt="image" />
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
+            </div>
 
-              <div class="product-info">
-                <h2>Mandala Thangka Art</h2>
-                <p class="text-danger">$500</p>
-                <p class="discount-price">
-                  <span class="text-info"><s>$600</s></span> -30%
-                </p>
-                <button class="full-width">ADD TO CART</button>
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="product-wrapper">
+              <div class="product">
+                <div class="product-img-wrapper">
+                  <img src="img/products/project5.jpg" alt="image" />
+                </div>
+
+                <div class="product-info">
+                  <h2>Mandala Thangka Art</h2>
+                  <p class="text-danger">$500</p>
+                  <p class="discount-price">
+                    <span class="text-info"><s>$600</s></span> -30%
+                  </p>
+                  <button class="full-width">ADD TO CART</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
       <!-- content ends -->
+
+      <div class="row clearfix">
+        <div class="col-12 padding-0">
+          <div class="headings text-center padding-15 clearfix">
+            <span class="line col-4 padding-0"></span>
+            <h2 class="col-4 padding-0">Top Categories</h2>
+            <span class="line col-4 padding-0"></span>
+          </div>
+
+          <div class="categories-block clearfix">
+            <div class="category-block">
+              <img src="img/products/project6.jpg" alt="image" />
+              <div class="category-info">
+                <h2>Mandala</h2>
+              </div>
+            </div>
+
+            <div class="category-block">
+              <img src="img/products/project6.jpg" alt="image" />
+              <div class="category-info">
+                <h2>Peaceful Deities</h2>
+              </div>
+            </div>
+
+            <div class="category-block">
+              <img src="img/products/project6.jpg" alt="image" />
+              <div class="category-info">
+                <h2>Protector Deities (Dharmapala)</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- footer  -->
       <footer class="padding-15">
