add about us section

--- a/index.html
+++ b/index.html
@@ -342,6 +342,39 @@
         </div>
       </div>
 
+      <!-- about -->
+      <div class="row clearfix">
+        <div class="col-12 padding-0">
+          <div class="headings text-center padding-15 clearfix">
+            <span class="line col-4 padding-0"></span>
+            <h2 class="col-4 padding-0">About Us</h2>
+            <span class="line col-4 padding-0"></span>
+          </div>
+
+          <div class="about-us-block clearfix">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+              facilis aspernatur deleniti quas ullam excepturi eum voluptatum
+              ipsa quos quia consequuntur rem atque, tempore culpa ducimus omnis
+              eligendi aperiam tempora? Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Quisquam nobis debitis voluptates, eum vero
+              error architecto iste adipisci eius unde est? Debitis vero quis
+              expedita molestiae, a inventore voluptas minima?
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint
+              molestiae officia inventore facere vel? Quaerat aspernatur sed et
+              error, vel, deleniti suscipit voluptate assumenda aliquam minus
+              molestiae nobis inventore recusandae? Lorem ipsum dolor sit amet
+              consectetur, adipisicing elit. Quas quis illum cumque quod minima
+              consequatur, ad voluptatum facilis recusandae impedit facere illo
+              deleniti est doloremque enim. Sequi natus quibusdam saepe?
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- about -->
+
       <!-- footer  -->
       <footer class="padding-15">
         <div class="inner-footer">
