add hover effect on categories block

--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span class="text-danger"> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
 
@@ -76,9 +78,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
           <div class="masonry-pattern-2">
@@ -94,9 +98,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
 
@@ -113,9 +119,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
 
@@ -132,9 +140,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
           <div class="masonry-pattern-2 balance-height">
@@ -150,9 +160,11 @@
             <div class="flip-btm">
               <h3>
                 <span> Mandala Thangka</span>
-                <span> $500.00</span>
+                <span class="text-danger current-price"> $500.00</span>
+                <p class="discount-price">
+                  <span class="text-info"><s>$600</s></span> -30%
+                </p>
               </h3>
-              <button>VIEW</button>
             </div>
           </div>
         </div>
